--- a/src/main/resources/templates/complementos/navbar.html
+++ b/src/main/resources/templates/complementos/navbar.html
@@ -6,7 +6,7 @@
 <body>
 
 	<div th:fragment="navbar">
-	    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-lg px-3 py-3">
+	    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-3 py-3">
 	        <!-- Logo + Nombre -->
 	        <a class="navbar-brand d-flex align-items-center fs-5 fw-bold text-primary" href="/inicio">
 	            <img th:src="@{/images/logo.jpeg}"
@@ -37,7 +37,7 @@
 	                    <a class="nav-link" href="/productos">Lista de productos</a>
 	                </li>
 	                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-	                    <a class="nav-link" href="/jefe-ventas/paquetes/buscar">Panel Ventas</a>
+	                    <a class="nav-link" href="/jefe-ventas/paquetes/buscar">Administrar Paquetes</a>
 	                </li>
 	                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
 	                    <a class="nav-link" href="/jefe-ventas/ventas">Ventas</a>
